# simpleExcelAgent

./: LICENSE  README.md  README_ZH.md  requirements.txt
ExcelAgent/: final_history.txt  final_state.txt  pyproject.toml
ExcelAgent/MyExcelFiles/: 11.xlsx  88.xlsx  99.xlsx  99.xslx  hhh.xlsx  information.xlsx  output.xlsx  test.xlsx  新文件.xlsx
ExcelAgent/prompt/: image_partition.txt  image_text_depature copy.txt  image_text_depature.txt  tools_arguments.txt
ExcelAgent/src/StructureOutput/: structure_output_agent.py
ExcelAgent/src/agent/: __init__.py  graph.py
ExcelAgent/src/utils/: Connect.py  b64.py  common_tools.py
MCP_Server/: math_server.py  wether.py
MCP_Server/excel-mcp-server-main/: .gitignore  README.md  TOOLS.md  pyproject.toml
MCP_Server/excel-mcp-server-main/.github/workflows/: publish.yml
MCP_Server/excel-mcp-server-main/docs/: CNAME  index.html
MCP_Server/excel-mcp-server-main/src/excel_mcp/: __main__.py  cell_validation.py  chart.py  data.py  formatting.py  pivot.py  server.py  sheet.py  tables.py  workbook.py
